// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageExerciseList component No exercises case should show 'You got no exercises yet' 1`] = `
<div>
  <span>
    You got no exercises yet
  </span>
  <_ExerciseList
    list={Array []}
    onOrderChangeClick={[Function]}
    title="upcoming"
  />
  <_ExerciseList
    list={Array []}
    onOrderChangeClick={[Function]}
    title="completed"
  />
  <_ExerciseList
    list={Array []}
    onOrderChangeClick={[Function]}
    title="skipped"
  />
</div>
`;

exports[`ManageExerciseList component Session is completed should show the completed message 1`] = `
<div>
  <h2>
    Your session 
    thisIsUniqueSessionKey
     is COMPLETED!
  </h2>
  <span>
    You got no exercises yet
  </span>
  <_ExerciseList
    list={Array []}
    onOrderChangeClick={[Function]}
    title="upcoming"
  />
  <_ExerciseList
    list={Array []}
    onOrderChangeClick={[Function]}
    title="completed"
  />
  <_ExerciseList
    list={Array []}
    onOrderChangeClick={[Function]}
    title="skipped"
  />
</div>
`;
